input/files/examples/errors/JavaExampleError002.java
public class JavaExampleError002 {
	private int test; // should be private int
}

package errors; //Package declaration on the EOF
